# prepturk

./: .editorconfig  .env.example  .gitignore  CITATION.cff  FEATURES.md  LICENSE  Makefile  README.ar.md  README.md  README.ru.md  README.tr.md  THIRD_PARTY_NOTICES.md  capture_logo.py  docker-compose.yml  frontend_audit.py  frontend_audit_modes.py  logo_render.html  remaining.md  roadmap.md  usability_crawler.py
.github/: PULL_REQUEST_TEMPLATE.md
.playwright-mcp/: page-2026-04-08T07-11-21-807Z.yml  page-2026-04-08T07-17-57-456Z.yml  page-2026-04-08T07-30-40-272Z.yml  page-2026-04-08T07-35-08-323Z.yml  page-2026-04-08T09-31-34-335Z.yml  page-2026-04-08T09-31-55-687Z.yml  page-2026-04-08T09-32-06-238Z.yml  page-2026-04-08T09-32-32-219Z.yml  page-2026-04-08T09-32-40-354Z.yml  page-2026-04-08T09-33-24-224Z.yml  page-2026-04-09T18-36-44-569Z.yml  page-2026-04-09T18-36-47-351Z.yml  page-2026-04-09T18-37-36-772Z.yml  page-2026-04-09T18-38-46-756Z.yml  page-2026-04-09T18-40-13-593Z.yml  page-2026-04-09T19-16-09-792Z.yml  page-2026-04-09T19-25-18-240Z.yml  page-2026-04-09T19-25-39-047Z.yml  page-2026-04-09T19-26-06-361Z.yml  (+2 more)
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py
apps/api/app/db/: database.py  models.py
apps/api/app/routes/: __init__.py  ai_chat.py  auth.py  dashboard.py  documents.py  exports.py  hardware.py  ingestion.py  maps.py  notes.py  province_packs.py  review.py  search.py  settings.py  sources.py  users.py  vault.py
apps/api/app/schemas/: __init__.py
apps/api/app/security/: __init__.py  auth.py
apps/api/app/services/: ai_service.py  document_service.py  search_service.py  source_service.py
apps/api/tests/: test_auth.py  test_ingestion_adapters.py  test_runtime_contract.py  test_search.py
apps/worker/: pyproject.toml
apps/worker/app/: config.py  db.py  main.py  models.py
apps/worker/app/adapters/: __init__.py  base.py  html_adapter.py  pdf_adapter.py  pointer_adapter.py
apps/worker/app/embeddings/: __init__.py  ollama_embeddings.py
apps/worker/app/jobs/: __init__.py  ingestion_job.py  scheduler.py
apps/worker/app/ocr/: __init__.py  tesseract.py
apps/worker/app/parsers/: __init__.py  html_parser.py  metadata_parser.py  pdf_parser.py
apps/worker/app/storage/: __init__.py  file_storage.py
apps/worker/app/utils/: __init__.py  chunking.py  turkish.py
apps/worker/tests/: test_adapters.py  test_chunking.py  test_deterministic_scheduler.py  test_ingestion.py  test_ingestion_adapters.py
content/: assembly-points.json
(+219 files in other folders)
